--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@ iframe {
   border-radius: 1em;
   border: 2px rgba(0, 0, 0, 0.5);
   border-style: solid;
+  background-color: #1a1a1a !important;
 }
 
 iframe video {
