--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,10 @@ iframe video {
   margin: 0 auto;
 }
 
+iframe .yt-live-chat-item-list-renderer {
+  display: none;
+}
+
 a {
   color: rgb(0, 191, 255) !important;
   text-decoration: none;
