--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,9 +38,10 @@ iframe {
   display: block;
   margin: 0 auto;
   border-radius: 1em;
-  border: 2px rgba(0, 0, 0, 0.5);
-  border-style: solid;
-  background-color: #1a1a1a !important;
+  background-color: rgba(255, 255, 255, 0.25) !important;
+  -webkit-box-shadow: 0px 0px 3px 3px rgba(255, 255, 255, 0.15);
+  -moz-box-shadow: 0px 0px 3px 3px rgba(255, 255, 255, 0.15);
+  box-shadow: 0px 0px 3px 3px rgba(255, 255, 255, 0.15);
 }
 
 iframe video {
@@ -74,10 +75,12 @@ a.icon img {
 
 .logo {
   border-radius: 100%;
-  border: 2px rgba(0, 0, 0, 0.5);
-  border-style: solid;
   display: block;
   margin: 0 auto;
+  background-color: rgba(255, 255, 255, 0.25) !important;
+  -webkit-box-shadow: 0px 0px 5px 5px rgba(255, 255, 255, 0.15);
+  -moz-box-shadow: 0px 0px 5px 5px rgba(255, 255, 255, 0.15);
+  box-shadow: 0px 0px 5px 5px rgba(255, 255, 255, 0.15);
 }
 
 .text-light-purple {
