--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 html,
 body {
@@ -32,6 +33,9 @@ h5,
 h6 {
   color: #fffb00 !important;
   font-weight: 700;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 iframe {
@@ -97,4 +101,8 @@ a.icon img {
 
 .w-65 {
   width: 65% !important;
+}
+
+#reloadButton {
+  cursor: pointer;
 }
