--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,10 +45,10 @@ iframe {
   display: block;
   margin: 0 auto;
   border-radius: 0.25em;
-  background-color: rgba(1, 1, 1, 0.25) !important;
-  -webkit-box-shadow: 0px 0px 1px 1px rgba(1, 1, 1, 0.15);
-  -moz-box-shadow: 0px 0px 1px 1px rgba(1, 1, 1, 0.15);
-  box-shadow: 0px 0px 1px 1px rgba(1, 1, 1, 0.15);
+  background-color: #1a1a1a !important;
+  -webkit-box-shadow: 0px 0px 1px 1px rgba(1, 1, 1, 0.4);
+  -moz-box-shadow: 0px 0px 1px 1px rgba(1, 1, 1, 0.4);
+  box-shadow: 0px 0px 1px 1px rgba(1, 1, 1, 0.4);
 }
 
 iframe video {
@@ -84,10 +84,10 @@ a.icon img {
   border-radius: 100%;
   display: block;
   margin: 0 auto;
-  background-color: rgba(1, 1, 1, 0.25) !important;
-  -webkit-box-shadow: 0px 0px 2px 2px rgba(1, 1, 1, 0.15);
-  -moz-box-shadow: 0px 0px 2px 2px rgba(1, 1, 1, 0.15);
-  box-shadow: 0px 0px 2px 2px rgba(1, 1, 1, 0.15);
+  background-color: #1a1a1a !important;
+  -webkit-box-shadow: 0px 0px 2px 2px rgba(1, 1, 1, 0.4);
+  -moz-box-shadow: 0px 0px 2px 2px rgba(1, 1, 1, 0.4);
+  box-shadow: 0px 0px 2px 2px rgba(1, 1, 1, 0.4);
 }
 
 .text-light-purple {
